...
      <DrawerSection title={t('common.environment')} divider>
        <DrawerRow
          icon="settings-outline"
          accessory="chevron"
          label={t('common.settings')}
          onPress={go(() => navigation.navigate('MainTabs', tabParams('MyTab')))}
          testID="menu-my-settings"
        />
      </DrawerSection>
    </>
  );
}

...
